--- a/search-tutor.html
+++ b/search-tutor.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/color_palets.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/custom-switch-and-checkbox.css" />
+
     <link rel="stylesheet" href="/css/owl/owl.carousel.min.css" />
     <link rel="stylesheet" href="/css/owl/owl.theme.default.min.css" />
 
@@ -498,7 +500,7 @@
                           >
                             100%
                           </p>
-                          <div class="form-check">
+                          <!-- <div class="form-check">
                             <input
                               class="form-check-input"
                               type="checkbox"
@@ -506,6 +508,9 @@
                               id="flexCheckDefault"
                               style="scale: 1.3"
                             />
+                          </div> -->
+                          <div class="checkbox-wrapper-13 me-1">
+                            <input id="c1-13" type="checkbox" checked />
                           </div>
                         </div>
                         <div
