--- a/search-tutor.html
+++ b/search-tutor.html
@@ -493,22 +493,14 @@
                               ><i class="bi bi-star-fill text-gray-500"></i>
                             </div>
                           </div>
-                          <p class="text-muted">Mirpur , Dhaka</p>
+                          <p class="text-muted mb-0">Mirpur , Dhaka</p>
                           <p
-                            class="rounded px-1 text-muted"
+                            class="rounded px-1 text-muted mb-0"
                             style="border: 2px solid #8a8f98"
                           >
                             100%
                           </p>
-                          <!-- <div class="form-check">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              value=""
-                              id="flexCheckDefault"
-                              style="scale: 1.3"
-                            />
-                          </div> -->
+
                           <div class="checkbox-wrapper-13 me-1">
                             <input id="c1-13" type="checkbox" checked />
                           </div>
@@ -532,22 +524,15 @@
                               ><i class="bi bi-star-fill text-warning"></i>
                             </div>
                           </div>
-                          <p class="text-muted">Mirpur , Dhaka</p>
+                          <p class="text-muted mb-0">Mirpur , Dhaka</p>
                           <p
-                            class="rounded px-1 text-muted"
+                            class="rounded px-1 text-muted mb-0"
                             style="border: 2px solid #8a8f98"
                           >
                             100%
                           </p>
-                          <div class="form-check">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              value=""
-                              id="flexCheckDefault"
-                              style="scale: 1.3"
-                              checked
-                            />
+                          <div class="checkbox-wrapper-13 me-1">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -569,21 +554,15 @@
                               ><i class="bi bi-star-fill text-gray-500"></i>
                             </div>
                           </div>
-                          <p class="text-muted">Mirpur , Dhaka</p>
+                          <p class="text-muted mb-0">Mirpur , Dhaka</p>
                           <p
-                            class="rounded px-1 text-muted"
+                            class="rounded px-1 text-muted mb-0"
                             style="border: 2px solid #8a8f98"
                           >
                             100%
                           </p>
-                          <div class="form-check">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              value=""
-                              id="flexCheckDefault"
-                              style="scale: 1.3"
-                            />
+                          <div class="checkbox-wrapper-13 me-1">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -605,22 +584,15 @@
                               ><i class="bi bi-star-fill text-gray-500"></i>
                             </div>
                           </div>
-                          <p class="text-muted">Mirpur , Dhaka</p>
+                          <p class="text-muted mb-0">Mirpur , Dhaka</p>
                           <p
-                            class="rounded px-1 text-muted"
+                            class="rounded px-1 text-muted mb-0"
                             style="border: 2px solid #8a8f98"
                           >
                             100%
                           </p>
-                          <div class="form-check">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              value=""
-                              id="flexCheckDefault"
-                              style="scale: 1.3"
-                              checked
-                            />
+                          <div class="checkbox-wrapper-13 me-1">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -642,21 +614,15 @@
                               ><i class="bi bi-star-fill text-warning"></i>
                             </div>
                           </div>
-                          <p class="text-muted">Mirpur , Dhaka</p>
+                          <p class="text-muted mb-0">Mirpur , Dhaka</p>
                           <p
-                            class="rounded px-1 text-muted"
+                            class="rounded px-1 text-muted mb-0"
                             style="border: 2px solid #8a8f98"
                           >
                             100%
                           </p>
-                          <div class="form-check">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              value=""
-                              id="flexCheckDefault"
-                              style="scale: 1.3"
-                            />
+                          <div class="checkbox-wrapper-13 me-1">
+                            <input id="c1-13" type="checkbox" checked />
                           </div>
                         </div>
                         <div
@@ -678,22 +644,15 @@
                               ><i class="bi bi-star-fill text-gray-500"></i>
                             </div>
                           </div>
-                          <p class="text-muted">Mirpur , Dhaka</p>
+                          <p class="text-muted mb-0">Mirpur , Dhaka</p>
                           <p
-                            class="rounded px-1 text-muted"
+                            class="rounded px-1 text-muted mb-0"
                             style="border: 2px solid #8a8f98"
                           >
                             100%
                           </p>
-                          <div class="form-check">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              value=""
-                              id="flexCheckDefault"
-                              style="scale: 1.3"
-                              checked
-                            />
+                          <div class="checkbox-wrapper-13 me-1">
+                            <input id="c1-13" type="checkbox" checked />
                           </div>
                         </div>
                       </div>
@@ -729,36 +688,6 @@
     ></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".owl-carousel").owlCarousel({
-          loop: true,
-          margin: 10,
-          responsiveClass: true,
-          loop: true,
-          nav: true,
-          navText: [
-            "<i class='bi bi-chevron-right arrow-icon'></i>",
-            "<i class='bi bi-chevron-left arrow-icon'></i>",
-          ],
-          navClass: ["carousel-nav-btn-prev", "carousel-nav-btn-next"],
-          responsive: {
-            0: {
-              items: 1,
-              nav: true,
-            },
-            600: {
-              items: 2,
-              nav: false,
-            },
-            1000: {
-              items: 4,
-              nav: true,
-              loop: false,
-            },
-          },
-        });
-      });
-    </script>
+    
   </body>
 </html>
