--- a/status-log.html
+++ b/status-log.html
@@ -396,7 +396,10 @@
                     class="table table-hover bg-white shadow-none"
                     style="border-collapse: collapse"
                   >
-                    <thead class="text-dark" style="border-bottom: 1px solid #c8ced3">
+                    <thead
+                      class="text-dark"
+                      style="border-bottom: 1px solid #c8ced3"
+                    >
                       <tr>
                         <th scope="col" class="text-nowrap">SL</th>
                         <th scope="col" class="text-nowrap">EM NAme</th>
@@ -486,36 +489,5 @@
     ></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".owl-carousel").owlCarousel({
-          loop: true,
-          margin: 10,
-          responsiveClass: true,
-          loop: true,
-          nav: true,
-          navText: [
-            "<i class='bi bi-chevron-right arrow-icon'></i>",
-            "<i class='bi bi-chevron-left arrow-icon'></i>",
-          ],
-          navClass: ["carousel-nav-btn-prev", "carousel-nav-btn-next"],
-          responsive: {
-            0: {
-              items: 1,
-              nav: true,
-            },
-            600: {
-              items: 2,
-              nav: false,
-            },
-            1000: {
-              items: 4,
-              nav: true,
-              loop: false,
-            },
-          },
-        });
-      });
-    </script>
   </body>
 </html>
